version/0.16/_sources/api/solver/_autosummary/settings/uds_diffusivities.rst.txt
:orphan:

.. _uds_diffusivities:

uds_diffusivities
=================

.. autoclass:: ansys.fluent.core.solver.settings_232.uds_diffusivities.uds_diffusivities
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`uds_diffusivities_child <uds_diffusivities_child>`


.. rubric:: Included in:

==========================================   ============================

Parent                                                            Summary

==========================================   ============================
:ref:`uds_diffusivity <uds_diffusivity>`         'uds_diffusivity' child.

:ref:`uds_diffusivity <uds_diffusivity_1>`       'uds_diffusivity' child.

==========================================   ============================

