version/0.20/_sources/api/solver/_autosummary/settings/uds_diffusivities.rst.txt
:orphan:

.. _uds_diffusivities:

uds_diffusivities
=================

.. autoclass:: ansys.fluent.core.solver.settings_241.uds_diffusivities.uds_diffusivities
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`uds_diffusivities_child <uds_diffusivities_child>`


.. rubric:: Included in:

==========================================   ============================

Parent                                                            Summary

==========================================   ============================
:ref:`uds_diffusivity <uds_diffusivity>`         'uds_diffusivity' child.

:ref:`uds_diffusivity <uds_diffusivity_1>`       'uds_diffusivity' child.

==========================================   ============================

